--- a/src/Knp/Invoice/Resources/views/simple_theme/invoice.html.twig
+++ b/src/Knp/Invoice/Resources/views/simple_theme/invoice.html.twig
@@ -3,35 +3,35 @@
 {% block content %}
     <div id="seller">
     {%- if invoice.seller.logo is not empty %}
-        <img src="{{ invoice.seller.logo }}" alt="">
+        <img src="{{ invoice.seller.logo }}" alt="" style="margin-left: 0px; height:50px;">
     {%- endif %}
         <p>{{- invoice.seller.name }}</p>
         {%- for item in invoice.seller.address %}
-            <p>{{- item }}</p>
+            {{- item }}<br>
         {%- endfor %}
     </div>
 
-    <div id="invoice">
+    <div id="invoice" style="margin-left: 350px;">
         <dl>
             <dd>{{ invoice.number }}</dd>
-            <dt>Facture #</dt>
 
             <dd>{{ invoice.createdAt|date('F j, Y') }}</dd>
-            <dt>Facture Date</dt>
         </dl>
 
         <dl class="invoice-total">
-            <dd>&euro; {{ invoice.total.amount }} EUR</dd>
-            <dt>Amount Due</dt>
+            <dd>${{ invoice.total.amount }} USD</dd>
+            <dt>Amount Paid</dt>
         </dl>
     </div>
 
     {%- if invoice.buyer is not empty %}
     <div id="buyer">
-        <p>{{- invoice.buyer.name }}</p>
+        <p><strong>CUSTOMER:</strong></p>
+        <p>{{- invoice.buyer.name }}<br>
         {%- for item in invoice.buyer.address %}
-        <p>{{- item }}</p>
+        {{- item }}<br>
         {%- endfor %}
+        </p>
     </div>
     {%- endif %}
 
@@ -42,43 +42,35 @@
     <div id="invoice-total">
         <dl>
             <dt><strong>Subtotal</strong></dt>
-            <dd><strong>{{ invoice.total.netto }}</strong></dd>
+            <dd><strong>${{ invoice.total.netto }}</strong></dd>
 
         {%- for tax, value in invoice.total.taxes %}
             <dt>{{ tax|default('TVA 0%') }}</dt>
-            <dd>{{ value|default(0) }}</dd>
+            <dd>{{ value|default(0) }}%</dd>
         {%- else %}
-            <dt>TVA 0%</dt>
+            <dt>TVA 0%</dt>%
             <dd>0</dd>
         {%- endfor %}
         </dl>
 
         <dl>
             <dt><strong>Total</strong></dt>
-            <dd><strong>{{ invoice.total.brutto }}</strong></dd>
+            <dd><strong>${{ invoice.total.brutto }}</strong></dd>
 
         {%- if invoice.coupon is not empty %}
             <dt>Coupon used</dt>
             <dd>{{ invoice.coupon.name }} (-{{ invoice.coupon.value }})</dd>
         {%- endif %}
 
-            <dt>Amount Paid</dt>
-            <dd>-{{ invoice.paid|default('0.00') }}</dd>
         </dl>
 
         <dl class="invoice-total">
-            <dt>Amount Due</dt>
-            <dd>&euro; {{ invoice.total.amount }} EUR</dd>
+            <dt>Amount Paid</dt>
+            <dd>${{ invoice.total.brutto }} USD</dd>
         </dl>
     </div>
 
-    <div id="terms">
-        <strong>Terms:</strong>
-        <p>{{ invoice.terms|default('-') }}</p>
-    </div>
-
-    <div id="notes">
-        <strong>Notes:</strong>
-        <p>{{ invoice.notes|default('-') }}</p>
+    <div id="terms"><br><br><br>
+        <strong>Thank you for using Snitcher.com.<br>Any questions about this invoice? Contact us at support@snitcher.com or using +31 20 261 5475</strong>
     </div>
 {% endblock %}
